2012-02-02 (0.5-4) Marcos Prates  <marcosop@ime.unicamp.br> and Jun Yan <jyan@stat.uconn.edu>

  * changed on runBUGS() to try to run OpenBUGS 
    at most 2 times

2011-11-08 (0.5-3) Marcos Prates  <marcosop@ime.unicamp.br> and Jun Yan <jyan@stat.uconn.edu>

  * Removed WINE support

  * Removed WINE support
    Fix the automatic path for OpenBUGS 
    (in Linux)

2011-06-27 (0.5-2) Marcos Prates  <marcosop@ime.unicamp.br> and Jun Yan <jyan@stat.uconn.edu>

  * Included the burnin and thining in the
    rbugs2coda function

2011-02-19 (0.5-1) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem on linux when there were a 
    need to recall the rbugs function to run OpenBUGS.

2011-02-18 (0.5-0) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem for OpenBUGS on linux,
   when defining the bugs path.

2011-01-01 (0.4-9) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem of out of range random seed 
    when generating initial seed for OpenBUGS.
  (thanks to Wen Huang)

2010-10-19 (0.4-8) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the problem when generating intial files.
  (thanks to Dr Stefano Conti)

2010-10-15 (0.4-7) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the log.txt generating problem in Linux
  the log.txt file is necessary to get the DIC output.
  (thanks to Dr Stefano Conti)
  
2010-09-28 (0.4-6) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Fixed the loading coda file in getBugsOutput 
  function when data is saved from OpenBugs using
  the interface.

2010-09-28 (0.4-5) Marcos Prates  <marcos.prates@uconn.edu> and Jun Yan <jyan@stat.uconn.edu>

  * Input the generation of the "rbugs" class
  to the getBugsOutput function.

