@@ -1,15 +1,15 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
 Date: 2011-02-19
-Version: 0.5-4
+Version: 0.5-5
 Author: Jun Yan <jyan@stat.uconn.edu> and Marcos Prates
-        <marcosop@ime.unicamp.br>
+        <marcosop@est.ufmg.br>
 Description: Functions to prepare files needed for running BUGS in
         batch-mode, and running BUGS from R. Support for Linux and
         Windows systems with OpenBugs is emphasized.
 Suggests: coda (>= 0.13-5)
-Maintainer: Marcos Prates <marcosop@ime.unicamp.br>
+Maintainer: Marcos Prates <marcosop@est.ufmg.br>
 License: GPL (>= 3.0)
-Packaged: 2012-02-02 13:02:41 UTC; marcosop
+Packaged: 2012-02-10 18:12:42 UTC; marcosop
 Repository: CRAN
-Date/Publication: 2012-02-02 16:35:30
+Date/Publication: 2012-02-24 17:39:15
