@@ -1,9 +1,9 @@
-415eda89d114525178f78b4039eda489 *ChangeLog
-de535d75ce134b51b0156e4a8906c7e5 *DESCRIPTION
+e6933f5cfcb36f1b0e65e619944f200a *ChangeLog
+2b52a0fa124c63765fc061ff04dfbdb2 *DESCRIPTION
 4371c52c8e060302e3f24d7dab7c2888 *NAMESPACE
 e7468d850a0cbf123b668cec8f4d8815 *R/genOpenBugsScript.R
 fdd8ae1f6cc1b4055ffc92fe1a1ef95f *R/print.rbugs.R
-30ccc8908089b9dc61f25c972b8ab645 *R/rbugs.R
+e3535e2ad8973653d60db13744794d77 *R/rbugs.R
 a74e9212a05db8d1c7c4467e48722039 *R/rbugs2coda.R
 a78c6b7d4d5ce9a06c2b7e0ce4ef6b97 *R/utils.R
 3aeb920023a0e310681829c4fdc67bfb *R/zzz.R
@@ -17,15 +17,15 @@ c5e6842ab1d8a5d95fdfaba673cab167 *inst/bugs/inits/pumps.txt
 db6bb71fd0b2c175569d9c8e31776dbe *inst/bugs/model/pumps.bug
 81e0adcb4eb12c3d15c87ec93cca2e96 *inst/bugs/model/schools.bug
 9ac2736599c9664d38075bb0922a0c1a *inst/docs/rnews_rbugs.pdf
-955b7553a686ddc76892b5463a93f8ce *man/format4Bugs.Rd
+653a50f133bac9deb1628d28718258fd *man/format4Bugs.Rd
 90755dc2d2a260843a673aa9a6286bae *man/formatData.Rd
-9ec994af812ec573ca7e58ae9c220f7e *man/genBugsScript.Rd
-a1f02169fc833400505fa07048b397cb *man/genDataFile.Rd
-75e2a9c8be83aca9c5a42e9bf84ae5c5 *man/genInitsFile.Rd
-cba57a57d045b37e41a6340f33e11dfb *man/getBugsOutput.Rd
+451bb7246d61eee803b949ce62bc7e7f *man/genBugsScript.Rd
+4d8a0d43ac77001ff815b4439e043304 *man/genDataFile.Rd
+e3c05b77ed4ec0276c7f0b3d91779399 *man/genInitsFile.Rd
+7da44a73a3595950fb07e8f9c7d42f56 *man/getBugsOutput.Rd
 0c2c97a9f9f3c6ddb5e7cff44b775272 *man/print.rbugs.Rd
-b75fb4abb8c43ce3bc8f56e536164d06 *man/pumps.Rd
-1f66f7a52c0391453b547fedf853c0a1 *man/rbugs.Rd
+628ee078075406e2c7e23a6efa12fa3d *man/pumps.Rd
+ede38ce9a4c731b73fad71bacb698daf *man/rbugs.Rd
 40b98cd2843c10ee1b3da6299a1ca7ea *man/rbugs2coda.Rd
-177591c6bef7786ef0884363b980fdb4 *man/runBugs.Rd
-ca23a10bb9e09475fdd9fe9c26a9871b *man/schools.Rd
+1e3a55cbf8d9a6689476a6cd9985993f *man/runBugs.Rd
+fab5275b0614ccfd6b8e248bf55882e6 *man/schools.Rd
