@@ -1,3 +1,10 @@
+2012-02-03 (0.5-5) Marcos Prates <marcosop@est.ufmg.br> and Jun Yan <jyan@stat.uconn.edu>
+
+  * fixed examples files
+  * changed corresponding email
+  * removed absolutepah command to
+    run in the cluster
+
 2012-02-02 (0.5-4) Marcos Prates  <marcosop@ime.unicamp.br> and Jun Yan <jyan@stat.uconn.edu>
 
   * changed on runBUGS() to try to run OpenBUGS 
